// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info should match a snapshot for variant  1`] = `
<div
  className="container isRelative py-8"
>
  <div
    className="card undefined"
  >
    <div
      className="cardContent"
    >
      <h3
        className="title is6"
      />
    </div>
  </div>
</div>
`;

exports[`Info should match a snapshot for variant 404 1`] = `
<div
  className="container isRelative py-8"
>
  <div
    className="card undefined"
  >
    <div
      className="cardContent"
    >
      <h3
        className="title is6"
      >
        Page not found
      </h3>
    </div>
  </div>
</div>
`;

exports[`Info should match a snapshot for variant ADMIN_APPROVALS_EMPTY 1`] = `
<div
  className="container isRelative py-8"
>
  <div
    className="card undefined"
  >
    <div
      className="cardContent"
    >
      <h3
        className="title is6"
      >
        There are no updates that require approval
      </h3>
    </div>
  </div>
</div>
`;

exports[`Info should match a snapshot for variant CLIENT_APPS_EMPTY 1`] = `
<div
  className="container isRelative py-8"
>
  <div
    className="card undefined"
  >
    <div
      className="cardContent"
    >
      <h3
        className="title is6"
      >
        We are sorry, there are no apps listed compatible with your account
      </h3>
    </div>
  </div>
</div>
`;

exports[`Info should match a snapshot for variant DEVELOPER_APPS_EMPTY 1`] = `
<div
  className="container isRelative py-8"
>
  <div
    className="card undefined"
  >
    <div
      className="cardContent"
    >
      <h3
        className="title is6"
      >
        You currently have no apps listed. Go to the submit app page to submit an app. After submission, you will need to edit the app and set status to isListed to appear in the marketplace
      </h3>
    </div>
  </div>
</div>
`;

exports[`Info should match a snapshot for variant INSTALLED_APPS_EMPTY 1`] = `
<div
  className="container isRelative py-8"
>
  <div
    className="card undefined"
  >
    <div
      className="cardContent"
    >
      <h3
        className="title is6"
      >
        You have no apps installed - try browsing the apps list for apps you might find useful
      </h3>
    </div>
  </div>
</div>
`;
